[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo"
version = "0.0.0"
dependencies = [
    "python-multipart",
    "sqlite-utils",
    "starlette",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    # Needed for websockets used by live reload.
    "uvicorn[standard]",
]